start changing aproach of getting questions for exam

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+# Postgres config
 spring.datasource.url=jdbc:postgresql://localhost:5432/driving_exam
 spring.datasource.username=dev1
 spring.datasource.password=development
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+#H2 Database Configuration for testing
+
+spring.datasource.test.url=jdbc:h2:mem/unit_test_db
+spring.datasource.test.diver-class-name=org.h2.Driver
+spring.datasource.test.username=sa
+spring.datasource.test.password=password
+spring.jpa.test.hibernate.ddl-auto = create-drop
